<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Video Settings -->


    <!-- Video Enhancements -->
    <PreferenceScreen android:title="@string/enhancements">

        <ListPreference
            android:entries="@array/internalResolutionEntries"
            android:entryValues="@array/internalResolutionValues"
            android:key="internalResolution"
            android:summary="@string/internal_resolution_descrip"
            android:title="@string/internal_resolution"/>

        <ListPreference
                android:entries="@array/FSAAEntries"
                android:entryValues="@array/FSAAValues"
                android:key="FSAA"
                android:summary="@string/FSAA_descrip"
                android:title="@string/FSAA"/>

        <ListPreference 
            android:entries="@array/anisotropicFilteringEntries"
            android:entryValues="@array/anisotropicFilteringValues"
            android:key="anisotropicFiltering"
            android:summary="@string/anisotropic_filtering_descrip"
            android:title="@string/anisotropic_filtering"/>

        <ListPreference
            android:key="postProcessingShader"
            android:summary="@string/postprocessing_shader_descrip"
            android:title="@string/postprocessing_shader"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="scaledEFBCopy"
            android:summary="@string/scaled_efb_copy_descrip"
            android:title="@string/scaled_efb_copy"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="perPixelLighting"
            android:summary="@string/per_pixel_lighting_descrip"
            android:title="@string/per_pixel_lighting"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="forceTextureFiltering"
            android:summary="@string/force_texture_filtering_descrip"
            android:title="@string/force_texture_filtering"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disableFog"
            android:summary="@string/disable_fog_descrip"
            android:title="@string/disable_fog"/>

		<PreferenceScreen
			android:title="@string/stereoscopy"
			android:key="StereoscopyScreen"
			android:summary="@string/stereoscopy_descrip">

			<ListPreference
				android:entries="@array/stereoscopyEntries"
				android:entryValues="@array/stereoscopyValues"
				android:key="stereoscopyMode"
				android:summary="@string/stereoscopy_mode_descrip"
				android:title="@string/stereoscopy_mode"/>

			<org.dolphinemu.dolphinemu.utils.SliderPreference
				android:defaultValue="20"
				android:key="stereoDepth"
				android:max="100"
				android:summary="@string/sterescopy_depth_descrip"
				android:title="@string/sterescopy_depth" />

			<org.dolphinemu.dolphinemu.utils.SliderPreference
				android:defaultValue="20"
				android:key="stereoConvergence"
				android:max="500"
				android:summary="@string/convergence_descrip"
				android:title="@string/convergence" />

			<CheckBoxPreference
				android:defaultValue="false"
				android:key="stereoSwapEyes"
				android:summary="@string/swap_eyes_descrip"
				android:title="@string/swap_eyes"/>
		</PreferenceScreen>
    </PreferenceScreen>

    <!-- Video Hacks -->
    <PreferenceScreen android:title="@string/hacks">
        <PreferenceCategory android:title="@string/embedded_frame_buffer">

         <CheckBoxPreference
             android:defaultValue="false"
             android:key="skipEFBAccess"
             android:summary="@string/skip_efb_access_descrip"
             android:title="@string/skip_efb_access"/>

         <CheckBoxPreference
             android:defaultValue="true"
             android:key="ignoreFormatChanges"
             android:summary="@string/ignore_format_changes_descrip" 
             android:title="@string/ignore_format_changes"/>

         <ListPreference
             android:defaultValue="Texture"
             android:entries="@array/efbCopyMethodEntries"
             android:entryValues="@array/efbCopyMethodValues"
             android:key="efbCopyMethod"
             android:summary="@string/efb_copy_method_descrip"
             android:title="@string/efb_copy_method"/>

     </PreferenceCategory>

        <!-- Texture Cache -->
        <PreferenceCategory android:title="@string/texture_cache">
         <ListPreference
             android:defaultValue="Low"
             android:entries="@array/textureCacheAccuracyEntries"
             android:entryValues="@array/textureCacheAccuracyValues"
             android:key="textureCacheAccuracy"
             android:summary="@string/texture_cache_accuracy_descrip"
             android:title="@string/texture_cache_accuracy"/>
        </PreferenceCategory>

        <!-- External Frame Buffer -->
        <PreferenceCategory android:title="@string/external_frame_buffer">
        <ListPreference
            android:defaultValue="Disabled"
            android:entries="@array/externalFrameBufferEntries"
            android:entryValues="@array/externalFrameBufferValues"
            android:key="externalFrameBuffer"
            android:summary="@string/external_frame_buffer_descrip"
            android:title="@string/external_frame_buffer"/>
        </PreferenceCategory>


        <!-- Other Hacks -->
        <PreferenceCategory android:title="@string/other">

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableDestinationAlpha"
                android:summary="@string/disable_destination_alpha_descrip"
                android:title="@string/disable_destination_alpha"/>

            <CheckBoxPreference 
                android:defaultValue="true"
                android:key="fastDepthCalculation"
                android:summary="@string/fast_depth_calculation_descrip"
                android:title="@string/fast_depth_calculation"/>

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/aspectRatioEntries"
                android:entryValues="@array/aspectRatioValues"
                android:key="aspectRatio"
                android:summary="@string/aspect_ratio_descrip"
                android:title="@string/aspect_ratio"/>

        </PreferenceCategory>
    </PreferenceScreen>

    <org.dolphinemu.dolphinemu.settings.custom.UpdatingListPreference
       android:key="gpuPref"
       android:summary="@string/video_backend_desc"
       android:title="@string/video_backend" />

    <CheckBoxPreference
       android:key="showFPS"
       android:summary="@string/show_fps_descrip"
       android:title="@string/show_fps"/>
</PreferenceScreen>