<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/input_settings">

    <Preference
        android:key="inputOverlayConfigPref"
        android:summary="@string/input_overlay_layout_desc"
        android:title="@string/input_overlay_layout"/>

    <PreferenceScreen
        android:key="gamecube_bindings"
        android:title="@string/gamecube_bindings">
        <PreferenceScreen
            android:key="gamecube_bindings_control_1"
            android:title="@string/controller_1">
            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputA_1"
                android:title="@string/button_a" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputB_1"
                android:title="@string/button_b" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputX_1"
                android:title="@string/button_x" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputY_1"
                android:title="@string/button_y" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputZ_1"
                android:title="@string/button_z" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputStart_1"
                android:title="@string/button_start" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadUp_1"
                android:title="@string/dpad_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadDown_1"
                android:title="@string/dpad_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadLeft_1"
                android:title="@string/dpad_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadRight_1"
                android:title="@string/dpad_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainUp_1"
                android:title="@string/main_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainDown_1"
                android:title="@string/main_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainLeft_1"
                android:title="@string/main_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainRight_1"
                android:title="@string/main_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickUp_1"
                android:title="@string/c_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickDown_1"
                android:title="@string/c_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickLeft_1"
                android:title="@string/c_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickRight_1"
                android:title="@string/c_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputL_1"
                android:title="@string/trigger_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputR_1"
                android:title="@string/trigger_right" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="gamecube_bindings_control_2"
            android:title="@string/controller_2">
            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputA_2"
                android:title="@string/button_a" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputB_2"
                android:title="@string/button_b" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputX_2"
                android:title="@string/button_x" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputY_2"
                android:title="@string/button_y" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputZ_2"
                android:title="@string/button_z" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputStart_2"
                android:title="@string/button_start" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadUp_2"
                android:title="@string/dpad_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadDown_2"
                android:title="@string/dpad_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadLeft_2"
                android:title="@string/dpad_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadRight_2"
                android:title="@string/dpad_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainUp_2"
                android:title="@string/main_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainDown_2"
                android:title="@string/main_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainLeft_2"
                android:title="@string/main_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainRight_2"
                android:title="@string/main_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickUp_2"
                android:title="@string/c_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickDown_2"
                android:title="@string/c_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickLeft_2"
                android:title="@string/c_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickRight_2"
                android:title="@string/c_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputL_2"
                android:title="@string/trigger_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputR_2"
                android:title="@string/trigger_right" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="gamecube_bindings_control_3"
            android:title="@string/controller_3">
            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputA_3"
                android:title="@string/button_a" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputB_3"
                android:title="@string/button_b" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputX_3"
                android:title="@string/button_x" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputY_3"
                android:title="@string/button_y" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputZ_3"
                android:title="@string/button_z" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputStart_3"
                android:title="@string/button_start" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadUp_3"
                android:title="@string/dpad_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadDown_3"
                android:title="@string/dpad_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadLeft_3"
                android:title="@string/dpad_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadRight_3"
                android:title="@string/dpad_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainUp_3"
                android:title="@string/main_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainDown_3"
                android:title="@string/main_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainLeft_3"
                android:title="@string/main_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainRight_3"
                android:title="@string/main_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickUp_3"
                android:title="@string/c_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickDown_3"
                android:title="@string/c_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickLeft_3"
                android:title="@string/c_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickRight_3"
                android:title="@string/c_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputL_3"
                android:title="@string/trigger_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputR_3"
                android:title="@string/trigger_right" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="gamecube_bindings_control_4"
            android:title="@string/controller_4">
            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputA_4"
                android:title="@string/button_a" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputB_4"
                android:title="@string/button_b" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputX_4"
                android:title="@string/button_x" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputY_4"
                android:title="@string/button_y" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputZ_4"
                android:title="@string/button_z" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputStart_4"
                android:title="@string/button_start" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadUp_4"
                android:title="@string/dpad_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadDown_4"
                android:title="@string/dpad_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadLeft_4"
                android:title="@string/dpad_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="DPadRight_4"
                android:title="@string/dpad_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainUp_4"
                android:title="@string/main_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainDown_4"
                android:title="@string/main_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainLeft_4"
                android:title="@string/main_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="MainRight_4"
                android:title="@string/main_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickUp_4"
                android:title="@string/c_stick_up" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickDown_4"
                android:title="@string/c_stick_down" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickLeft_4"
                android:title="@string/c_stick_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="CStickRight_4"
                android:title="@string/c_stick_right" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputL_4"
                android:title="@string/trigger_left" />

            <org.dolphinemu.dolphinemu.settings.input.InputBindingPreference
                android:key="InputR_4"
                android:title="@string/trigger_right" />
        </PreferenceScreen>
    </PreferenceScreen>
</PreferenceScreen>